Fixing overlap cards

--- a/app/assets/stylesheets/guidance.scss
+++ b/app/assets/stylesheets/guidance.scss
@@ -227,7 +227,7 @@ h2{
   border: 2px solid #335276;
 }
 
-@media only screen and (min-width: 250px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   #guidance_zone{
     flex-direction:column;
   }
